# TESI

./: .gitignore  AGENTS.md  AIJACK_ENV_SETUP.md  BLOODMNIST_FRONTIER_EXPERIMENT_MATRIX.md  BLOODMNIST_PRIVACY_UTILITY_CHECKLIST.md  EXPERIMENTS_RUN_SO_FAR.md  EXPERIMENT_LOG.md  PRIVACY_UTILITY_EXPERIMENT_PLAN.md  README.md  TODAY_STATUS.txt  baselin.ipynb  dovesiamo.md  experiment_plan.csv  pyproject.toml  requirements-baselin.txt  requirements.txt  setup_env.sh
.mplcache/: fontlist-v390.json
archive/: baselin.ipynb
configs/: iid_dp_noise_005.yaml  iid_dp_sigma_025.yaml  iid_dp_sigma_1.yaml  iid_dp_sigma_2.yaml  noniid_alpha_01_dp_noise_001.yaml  noniid_alpha_01_dp_sigma_075.yaml  noniid_alpha_01_dp_sigma_2.yaml  noniid_alpha_05_dp_sigma_05.yaml  noniid_alpha_05_dp_sigma_1.yaml  noniid_alpha_05_dp_sigma_2.yaml  noniid_alpha_1_dp_sigma_05.yaml  noniid_alpha_1_dp_sigma_2.yaml
notebooks/: 01_baseline.ipynb  02_experiments.ipynb
scripts/: aggregate_dp_matrix.py  attack_parameter_impact_bloodmnist.py  baseline_bloodmnist.py  build_day3_exploratory_delivery_package.py  exploratory_reconstruction_parameter_analysis.py  fedavg_bloodmnist_aijack.py  fedavg_bloodmnist_aijack_dp.py  fedavg_medmnist_aijack.py  gradient_inversion_bloodmnist_aijack.py  gradient_inversion_medmnist_aijack.py  plot_day2_screening_results.py  plot_frontier.py  rerun_failed_attacks.py  run_attack.py  run_bloodmnist_block_a_frontier.py  run_bloodmnist_fixed_attacker_eval.py  run_full_dp_privacy_utility_matrix.py  run_sweep.py  train_fedavg.py  train_fedavg_dp.py
src/: LHS.py  common.py  data.py  (+9 more)
(+95 files in other folders)
